test-data/error/const-yawspeed-unsupported.hltas
version 1
frames
s43-j-----|------|------|0.001|1|-|1
